<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="switch_mode">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>

    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="link_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="android_developer">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="my_mail_address">Alexvvv9511@yandex.ru</string>
    <string name="title_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="body_of_mail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="start_time">00:00</string>

</resources>