<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_setting_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        style="@style/titleStyle"
        android:id="@+id/back_to_activity_main_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_settings"
        android:text="@string/settings"
        android:padding="12dp"
        android:layout_marginBottom="24dp"
        android:stateListAnimator="@null"
        app:icon="@drawable/arrow" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/SwitcherStyle"
        android:text="@string/switch_mode"
        android:layout_gravity="start"
        android:layout_width="match_parent"
        app:switchMinWidth="35dp"
        android:layout_height="@dimen/height_button_settings"/>

    <Button
        style="@style/ButtonStyle_activity_settings"
        android:id="@+id/share_app_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_settings"
        android:text="@string/share_app"
        app:icon="@drawable/share"/>

    <Button
        style="@style/ButtonStyle_activity_settings"
        android:id="@+id/write_to_support_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_settings"
        android:text="@string/write_to_support"
        app:icon="@drawable/support"/>

    <Button
        style="@style/ButtonStyle_activity_settings"
        android:id="@+id/user_agreement_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_settings"
        android:text="@string/user_agreement"
        app:icon="@drawable/arrow_forward"/>

    </LinearLayout>