<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings_dark_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:backgroundTint="@color/black"
        android:text="@string/settings"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:paddingTop="10dp"
        android:paddingStart="12dp"
        android:paddingBottom="12dp"
        android:layout_marginBottom="24dp"/>

    <Switch
        android:id="@+id/firstSwitch"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_gravity="start"
        android:backgroundTint="@color/black"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/switch_mode"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:thumb="@drawable/knob"
        android:track="@drawable/track"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:backgroundTint="@color/black"
        android:text="@string/share_app"
        android:textSize="16sp"
        android:gravity="start|center"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:icon="@drawable/share"
        app:iconGravity="end"
        app:iconTint="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:backgroundTint="@color/black"
        android:text="@string/write_to_support"
        android:textSize="16sp"
        android:gravity="start|center"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:icon="@drawable/support"
        app:iconGravity="end"
        app:iconTint="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:backgroundTint="@color/black"
        android:text="@string/user_agreement"
        android:textSize="16sp"
        android:gravity="start|center"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:icon="@drawable/arrow_forward"
        app:iconGravity="end"
        app:iconTint="@color/white"/>

</LinearLayout>